src/objects/MUSW__Planning_Application__c.object
<CustomObject>
    <description>Planning Applications eg. Site Plan</description>
    <fields>
        <fullName>IsClosed__c</fullName>
        <formula>IF(OR(NOT(ISNULL(  MUSW__Approval_Date__c  )), NOT(ISNULL( MUSW__Completion_Date__c  )),NOT(ISNULL( MUSW__Decision_Date__c ))),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Iss_Track_No__c</fullName>
        <formula>IF( OR(ISNULL(MUSW__Tracking_Number__c), MUSW__Tracking_Number__c = &quot;&quot;), HYPERLINK(&quot;../&quot;&amp;Id, Name, &quot;_parent&quot;) &amp; &quot; &quot; &amp; HYPERLINK(&quot;/servlet/servlet.Integration?lid=01N460000004mW0&amp;Id=&quot; &amp; Id &amp; &quot;&amp;ic=1&amp;object=MUSW__Planning_Application__c&amp;setStatus=Under%20Review&amp;statusField=MUSW__Status__c&amp;type=&quot;&amp; CASE( MUSW__Type__c , 
&quot;Conditional Use Permit&quot;, &quot;CUP&quot;, 
&quot;Variance&quot;, &quot;VAR&quot;, 
&quot;DEFAULT&quot; )&amp;&quot;&amp;year=&quot;&amp; TEXT(YEAR(TODAY()))&amp;&quot;&amp;month=&quot;&amp; TEXT(MONTH(TODAY()))&amp;&quot;&amp;day=&quot;&amp; TEXT(DAY(TODAY())), &quot;(Issue)&quot;, &quot;_parent&quot;),HYPERLINK( &quot;../&quot;&amp;Id , MUSW__Tracking_Number__c,&quot;_parent&quot; ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Iss Appl. No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Decision_Date__c</fullName>
        <label>Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Planning_Applications_Developed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Issued_Number__c</fullName>
        <label>Issued No.</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MUSW__Master_Project__c</referenceTo>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Closed due to Inactivity</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Total_Due__c</fullName>
        <formula>MUSW__Total_Fees__c - IF(MUSW__Total_Payments__c = 0 , MUSW__Total_Receipts__c, MUSW__Total_Payments__c)</formula>
        <label>Total Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Fees__c</fullName>
        <label>Total Fees</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Payments__c</fullName>
        <label>Total Payments</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Receipts__c</fullName>
        <label>Total Receipts</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Tracking_Number__c</fullName>
        <externalId>true</externalId>
        <label>App. No.</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conditional Use Permit</fullName>
                </value>
                <value>
                    <fullName>Development Review</fullName>
                </value>
                <value>
                    <fullName>Subdivision Sketch</fullName>
                </value>
                <value>
                    <fullName>Subdivision Final Plat</fullName>
                </value>
                <value>
                    <fullName>Variance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <inlineHelpText>Overview for use on Public Notices, Meeting Agendas, etc.</inlineHelpText>
        <label>Short Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Application.</label>
    <listViews>
        <fullName>MUSW__All</fullName>
        <columns>NAME</columns>
        <columns>MUSW__Project__c</columns>
        <columns>MUSW__Type__c</columns>
        <columns>MUSW__Applicant__c</columns>
        <columns>MUSW__Due_Date__c</columns>
        <columns>MUSW__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications.</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>